--- a/src/app.scss
+++ b/src/app.scss
@@ -126,3 +126,7 @@ $grey: #747789;
 @import "./components/Header/style.scss";
 @import "./components/About/style.scss";
 @import "./components/HowToUse/style.scss";
+@import "./components/Benefits/style.scss";
+@import "./components/Questions/style.scss";
+@import "./components/Refill/style.scss";
+@import "./components/Footer/style.scss";
