--- a/src/components/About/style.scss
+++ b/src/components/About/style.scss
@@ -16,8 +16,7 @@
   }
   .my-swiper {
     margin-top: 100px;
-    max-height: 600px;
-    width: 70%;
+    width: 50%;
     cursor: pointer;
   }
   .about-item {
@@ -41,5 +40,93 @@
     width: 347px;
     margin: 50vh 80px 0;
     transform: translateY(-50%);
+  }
+
+  @include for-small-phone-only {
+    display: block;
+    .info {
+      margin-left: 0;
+      margin-right: 0;
+
+      h1 {
+        font-size: 40px;
+        text-align: center;
+      }
+      img {
+        width: 60%;
+        display: block;
+        margin-left: auto;
+        margin-right: auto;
+        padding-left: 20px;
+        padding-top: 40px;
+        padding-bottom: 15px;
+      }
+    }
+    .my-swiper {
+      width: 100%;
+      margin-top: 50px;
+      display: block;
+    }
+    .about-item {
+      .about-image {
+        object-fit: contain;
+      }
+    }
+    .about-item-last {
+      .about-image-last {
+        position: relative;
+        object-fit: contain;
+        width: 80%;
+        display: block;
+        margin-left: auto;
+        margin-right: auto;
+        margin-bottom: 20px;
+      }
+    }
+    .buttons {
+      width: 300px;
+      bottom: 30px;
+      left: 0;
+      right: 0;
+      margin: auto;
+      transform: translateY(-50%);
+
+      .store-btn {
+        width: 100px;
+        height: 50px;
+        font-size: 15px;
+      }
+    }
+  }
+  @include for-tablet-portait-only-and-for-tablet-landscape-only {
+    display: block;
+    .info {
+      img {
+        padding-top: 50px;
+      }
+    }
+    .my-swiper {
+      width: 95%;
+      margin: 50px auto 0 auto;
+      display: block;
+    }
+    .about-item-last {
+      padding-bottom: 20px;
+
+      .about-image-last {
+        position: relative;
+        object-fit: contain;
+        display: block;
+        margin-left: auto;
+        margin-right: auto;
+      }
+    }
+    .buttons {
+      bottom: 30px;
+      left: 0;
+      right: 0;
+      margin: auto;
+      transform: translateY(-50%);
+    }
   }
 }
