--- a/src/components/Questions/style.scss
+++ b/src/components/Questions/style.scss
@@ -3,13 +3,17 @@
   text-align: center;
   font-size: 36px;
   font-weight: 700;
-  margin-top: 85px;
   text-transform: uppercase;
+  @include for-small-phone-only {
+    font-size: 29px;
+    margin-top: 100px;
+  }
 }
 .questions {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-evenly;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  align-items: center;
+  justify-items: center;
   .question {
     width: 400px;
     text-align: center;
@@ -32,5 +36,29 @@
     padding: 4px 30px 20px;
     color: $white !important;
     border-radius: 48px;
+  }
+  @include for-small-phone-only {
+    h2 {
+      font-size: 29px;
+    }
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+    .question {
+      margin-top: 20px;
+      width: 350px;
+      padding: 20px;
+      h3 {
+        font-size: 25px;
+      }
+      strong {
+        font-size: 50px;
+      }
+    }
+  }
+  @include for-tablet-portait-only-and-for-tablet-landscape-only {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
   }
 }
