--- a/src/components/Refill/style.scss
+++ b/src/components/Refill/style.scss
@@ -71,4 +71,48 @@
       }
     }
   }
+  @include for-small-phone-only {
+    margin-top: 100px;
+    margin-bottom: 100px;
+    border-radius: 50px;
+    padding: 30px;
+    h2 {
+      font-weight: 700;
+      font-size: 40px;
+      margin-bottom: 20px;
+      padding-top: 30px;
+    }
+    strong {
+      font-size: 29px;
+    }
+    .cards {
+      flex-wrap: wrap;
+      .card {
+        margin-top: 30px;
+
+        strong {
+          font-size: 25px;
+        }
+        span {
+          width: 150px;
+          height: 35px;
+          font-size: 15px;
+        }
+      }
+    }
+  }
+  @include for-tablet-portait-only-and-for-tablet-landscape-only {
+    h2 {
+      z-index: 1;
+      font-size: 40px;
+      top: 0;
+    }
+    .refill__image {
+      z-index: 0;
+    }
+    .cards {
+      flex-wrap: wrap;
+      justify-content: space-between;
+    }
+  }
 }
