--- a/src/app.scss
+++ b/src/app.scss
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=Inter:wght@500;600;700;800&display=swap");
+@import "fonts/Inter/static/stylesheet.css";
 * {
   padding: 0;
   margin: 0;
