--- a/src/components/HowToUse/style.scss
+++ b/src/components/HowToUse/style.scss
@@ -62,7 +62,8 @@
     margin-top: 50px;
     border-radius: 50px;
     img {
-      width: 70%;
+      width: 45%;
+      object-fit: contain;
     }
     .how-to-use__items {
       width: 100%;
