--- a/src/components/About/style.scss
+++ b/src/components/About/style.scss
@@ -49,7 +49,7 @@
       margin-right: 0;
 
       h1 {
-        font-size: 40px;
+        font-size: 35px;
         text-align: center;
       }
       img {
@@ -70,6 +70,10 @@
     .about-item {
       .about-image {
         object-fit: contain;
+        width: 90%;
+        display: block;
+        margin-left: auto;
+        margin-right: auto;
       }
     }
     .about-item-last {
