--- a/src/components/About/style.scss
+++ b/src/components/About/style.scss
@@ -1,8 +1,13 @@
-.about {
+.about-block {
   margin-top: 100px;
   background-color: #222487;
+  @include for-small-phone-only {
+    margin-top: 70px;
+  }
+}
+.about {
   display: flex;
-  justify-content: space-between;
+  justify-content: space-evenly;
   align-items: center;
   .info {
     margin-left: 100px;
@@ -70,7 +75,7 @@
     .about-item {
       .about-image {
         object-fit: contain;
-        width: 90%;
+        width: 98%;
         display: block;
         margin-left: auto;
         margin-right: auto;
